# langpacks

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.runner  Dockerfile.single-base  Dockerfile.single-base-james  Dockerfile.single-builder  Dockerfile.single-builder-james  Dockerfile.single-runner  Dockerfile.single-runner-james  Jenkinsfile.langserver  LICENSE  README  README.md  build-all  generate-example  init-lang  init-langserver  ipa_package_naming_standards.md  langpack_guide.md  r34.dockerfile  requirements.txt  rustfmt.toml
.github/: pull_request_template.md
csharp/standardization/: Algorithm.csproj  Algorithm_Advanced.cs  Algorithm_Basic.cs  Pipe.cs
docker/: Dockerfile.base-builder  Dockerfile.base-runner  Dockerfile.j2  Dockerfile.single-base  Dockerfile.single-builder  Dockerfile.single-runner
docker/simplified/: Dockerfile.base  Dockerfile.base-gpu  Dockerfile.langpack  Dockerfile.langpack-builder  Dockerfile.langpack-gpu  Dockerfile.langpack-runner
docker/templated/: Dockerfile.python2
docker/unified/: Dockerfile.base  Dockerfile.base-gpu  Dockerfile.langpack  Dockerfile.langpack-builder  README
java/pipe/: pom.xml
java/standardization/: LICENSE  README.md  pom.xml
javascript/: README.md
languages/: Dockerfile.builder.j2  Dockerfile.compile.j2  Dockerfile.compileLocal.j2  Dockerfile.runner.j2  README.md  pack_dependencies.py  pack_deps.py  unpack_dependencies.py  unpack_deps.py
python/: Dockerfile.runner  README.md
python2/: README.md
ruby/: Dockerfile  Dockerfile.builder  README.md
rust/: .gitignore  README.md
rust-1.x/: README.md
rust-dynamic-1.x/: Cargo.toml  README.md
rust-dynamic-1.x/examples/hello/: Cargo.toml
rust-dynamic-1.x/examples/hello/src/: lib.rs
rust/examples/hello/: .dockerignore  Cargo.toml
rust/examples/hello/src/: lib.rs  main.rs
rust/template/: .gitignore  Cargo.toml  README.md  algorithmia.conf
rust/template/pipe/: main.rs
rust/template/src/: lib.rs  main.rs
sample-input/: base64.json  json-object.json  json-string.json  text-loop.json  text.json
src/: error.rs  langrunner.rs  langserver.rs  lib.rs  main.rs  message.rs  notifier.rs  response.rs
tools/: README.md  environment_validator.py  ipa_packageset_builder.py  ipa_packageset_validator.py  packageset_validation.md  packageset_validator.py  requirements.txt  template_manager.py
(+536 files in other folders)
