[package]
name = "__ALGO__"
version = "0.1.0"
edition = "2018"

[dependencies]
# algorithmia = { version = "3.0.0-beta", features = ["entrypoint"] }
algorithmia = { git = "https://github.com/anowell/algorithmia-rust.git", features = ["handler"] }
base64 = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
