[package]
name = "hello"
version = "0.1.0"
license = "MIT"
description = "Sample hello world algorithm"

# Do NOT change the [[bin]] and [lib] sections
[[bin]]
name = "pipe"
[lib]
name = "algorithm"


[dependencies]
rustc-serialize = "*"

[dependencies.algorithmia]
version = "*"
#git = "https://github.com/anowell/algorithmia_rust.git"
